--- a/iocBoot/templates/ioc-sample.cfg
+++ b/iocBoot/templates/ioc-sample.cfg
@@ -1,31 +1,99 @@
-RELEASE=/reg/g/pcds/package/epics/3.14/ioc/common/edtCam/RX.Y.Z
+#
+# CONFIG file for edt Camera
+#
 
-ENGINEER    = "Bruce Hill (bhill)"
-LOCATION    = "SXR Roving GigE 2"
-IOC_PV      = IOC:FEE1:441
+#RELEASE		= /reg/g/pcds/package/epics/3.14/ioc/common/edtCam/R1.4.0
+RELEASE		= /reg/neh/home2/bhill/wa2/epics/ioc/common/edtCam/current
 
-# Optional global config fields
-EPICS_CA_MAX_ARRAY_BYTES    = 20000000
-ST_CMD_DELAYS               = 1
+ENGINEER	= "Bruce Hill (bhill)"
+LOCATION	= "BUILDING 901-131"
+#TARGET_ARCH	= linuxRT_glibc-x86_64
+TARGET_ARCH	= linux-x86_64
 
-# Required EVR CONFIG FIELDS (ONLY ONE EVR PER IOC)
-EVR(NAME=EVR:FEE1:441,TYPE=PMC)
-# Optional EVR CONFIG FIELDS
-#EVR(NAME=EVR:FEE1:441,TYPE=PMC,CARD=0,DEBUG=0)
+HUTCH		= tst
+CAM_PV		= TST:EDT:OPAL1
+IOC_PV		= TST:IOC:EDT:OPAL1
+EVR_PV		= TST:EVR:EDT:OPAL1
+EVR_TYPE	= SLAC
+EVR_TRIG	= 2
+ErDebug		= 0
+EXTRA_TRIG(TRIG=4)
+EXTRA_TRIG(TRIG=5)
 
-# Required CAMERA CONFIG FIELDS (ONLY ONE CAMERA PER IOC)
-CAMERA(NAME=CAMR:FEE1:441,TYPE=hamaOrcaFlash4_0,CHAN=0,TRIG=0,HTTP_PORT=7800,MJPG_PORT=8081)
-# Optional CAMERA CONFIG FIELDS
-#CAMERA(NAME=CAMR:FEE1:441,TYPE=hamaOrcaFlash4_0,BOARD=0,CHAN=0,TRIG=0,HTTP_PORT=7800,MJPG_PORT=8081,PORT=CAM,MODE=Base,CAMTRACE=1,CAMTRACEIO=0,SERTRACE=1,SERTRACEIO=1)
+CAM_TYPE	= edt
+BOARD		= 0
+CHAN		= 0
+# Available models are: 
+# Options for MODEL can be found in: $RELEASE/db/$MODEL.env
+MODEL		= opal1000m_12
 
-# Required BLD CONFIG FIELDS
-BLD(NAME=CAMR:FEE1:441,SRC=95)
-# Optional BLD CONFIG FIELDS
-#BLD(NAME=CAMR:FEE1:441,SRC=95,XTC=0x10048,PORT=10148,MAX=8980)
+# Viewers: Still supported, but being phased out in favor of streams
+# commonPlugins plus VIEWERS: MonoFull, MonoBin2, and MonoBin4
+# provides the same set of plugins as pcdsPlugins
+#VIEWER(NAME=MonoFull)
+#VIEWER(NAME=MonoBin2,IMAGE_NAME=IMAGE2)
+#VIEWER(NAME=MonoBin4,IMAGE_NAME=THUMBNAIL)
 
-VIEWER(NAME=MonoFull)
-VIEWER(NAME=MonoBin2)
-VIEWER(NAME=MonoBin4)
+# Image streams
+# Each image stream has it's own dedicated ROI and CC plugin
+# and will in the future have some glue logic to help manage
+# the port connections, automatic initialization, ROI On/Off, etc
+# For now setup is still manual on first boot but is saved via autosave.
+# For image viewing, we typically want a 2x2 ROI and 10hz frame rate
+# for our large resolution cameras to void overloading the network or hosts.
+# Example:
+# ImageName, ArrayData PV,				ROI plugin prefix	ROI Port
+#	IMAGE2	 $(CAM):IMAGE2:ArrayData	$(CAM):IMAGE2:ROI	IMAGE2:ROI
+# Three types of streams are supported via the required NAME parameter:
+#	data		Intended for data recording at up to full rate and resolution
+#	viewer		Intended for viewing via edm or python viewers
+#	thumbnail	Intended for small low res low frame rate image monitoring via a 130x174 edm widget 
+#
+# For now, data and viewer get the same plugins and differ only in
+# how they are configured and used.  Later glue logic for setup and control
+# will differ for these.
+# Thumbnails get much the same plugins, but the ArrayData is UINT8 even for 16 bit cameras
+#
+# Optional Stream Parameters: (More to be added later)
+#	IMAGE_NAME	Defaults to DATA1, IMAGE1, or THUMBNAIL depending on the type of stream
+STREAM(NAME=data,IMAGE_NAME=IMAGE1)
+STREAM(NAME=viewer,IMAGE_NAME=IMAGE2)
+STREAM(NAME=thumbnail,IMAGE_NAME=THUMBNAIL)
 
-PLUGIN(NAME=Stats,NUM=1,SRC=CAM,LOC=setupScripts,PVNAME=CAMR:FEE1:441)
-#PLUGIN(NAME=Stats,NUM=1,SRC=CAM,LOC=setupScripts,ARCHIVE=Stats)
+# PLUGIN can be used to add individual plugins one by one
+# Must specify plugin NAME
+# N defaults to 1
+# PORT defaults to $(NAME)$(N)
+# If you're also using plugin sets, specify PORT or N to avoid conflicts
+# The Image plugin also requires parameter IMAGE_NAME
+#PLUGIN(NAME=Stats)
+#PLUGIN(NAME=Image,IMAGE_NAME=IMAGE3)
+#PLUGIN(NAME=TIFF,N=2)
+#PLUGIN(NAME=Stats,PORT=Stats5)
+PLUGIN(NAME=FileMPEG)
+PLUGIN(NAME=MJPG)
+
+# BLD is currently designed for the FEE spectrometer and needs
+# to get reworked into a Spectrometer PLUGIN
+# PLUGIN(Name=Spec,PROJ=Horiz,BLD_SRC=46)
+BLD(NAME=Spec,N=1)
+
+# Plugin sets
+# Options for PLUGINS are commonPlugins and pcdsPlugins
+# Note: pcdsPlugins is being phased out in favor of the commonPlugins
+# along w/ one or more viewer or data streams
+#PLUGINS		= commonPlugins
+
+# commonPlugins provides the following plugins:
+#	Proc1, Trans1, CC1, CC2, Over1,
+#	ROI1, ROI2, ROI3, ROI4,
+#	Stats1, Stats2, Stats3, Stats4,
+#	NetCDF1, TIFF1, JPEG1, Nexus1, HDF51
+
+# All areaDetector camera ioc's on a given host must have
+# their own HTTP and MJPG port numbers
+HTTP_PORT	= 7800
+
+# Optional acquisition auto-start
+AUTO_START	= 1
+
