Added evrUsed.db so we can intelligently hide EVR related PV's when no EVR. Updated edtCamTop to better match gigeTop Uptated templates sample cfg and st.cmd for new features. Updated to latest module releases.
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/ioc/common/edtCam/current@25402 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/edtApp/Db/Makefile
+++ b/edtApp/Db/Makefile
@@ -3,6 +3,9 @@ include $(TOP)/configure/CONFIG
 #----------------------------------------
 #  ADD MACRO DEFINITIONS AFTER THIS LINE
 
+DB += iocName.db
+DB += evrUsed.db
+
 # Create and install EDT Camera DB Files
 DB += bld_hist.db
 DB += edtCam_hist.db
