--- a/iocBoot/templates/ioc-sample.cfg
+++ b/iocBoot/templates/ioc-sample.cfg
@@ -2,37 +2,43 @@
 # CONFIG file for edt Camera
 #
 
-#RELEASE		= /reg/g/pcds/package/epics/3.14/ioc/common/edtCam/R1.4.0
-RELEASE		= /reg/neh/home2/bhill/wa2/epics/ioc/common/edtCam/current
+RELEASE		= /reg/g/pcds/package/epics/3.14/ioc/common/edtCam/R2.1.0
 
 ENGINEER	= "Bruce Hill (bhill)"
 LOCATION	= "BUILDING 901-131"
 #TARGET_ARCH	= linuxRT_glibc-x86_64
 TARGET_ARCH	= linux-x86_64
 
-HUTCH		= tst
-CAM_PV		= TST:EDT:OPAL1
+HUTCH		= xxx
+CAM_PV	    = XXX:G046B:02
 IOC_PV		= TST:IOC:EDT:OPAL1
-EVR_PV		= TST:EVR:EDT:OPAL1
-EVR_TYPE	= SLAC
-EVR_TRIG	= 2
-ErDebug		= 0
-EXTRA_TRIG(TRIG=4)
-EXTRA_TRIG(TRIG=5)
+IOC_PV		= XXX:IOC:G046B:02
+# EVR is optional but if used needs EVR_PV, EVR_TYPE, and EVR_TRIG
+#EVR_PV	    = XXX:EVR:G046B:02
+#EVR_TYPE	= SLAC
+#EVR_TRIG	= 2
+# Optional additional triggers
+#EXTRA_TRIG(TRIG=3)
+#EXTRA_TRIG(TRIG=4)
+#ErDebug	= 0
 
 CAM_TYPE	= edt
 BOARD		= 0
 CHAN		= 0
+
 # Available models are: 
 # Options for MODEL can be found in: $RELEASE/db/$MODEL.env
 MODEL		= opal1000m_12
 
-# Viewers: Still supported, but being phased out in favor of streams
-# commonPlugins plus VIEWERS: MonoFull, MonoBin2, and MonoBin4
-# provides the same set of plugins as pcdsPlugins
-#VIEWER(NAME=MonoFull)
-#VIEWER(NAME=MonoBin2,IMAGE_NAME=IMAGE2)
-#VIEWER(NAME=MonoBin4,IMAGE_NAME=THUMBNAIL)
+# Optional acquisition auto-start
+# AUTO_START	= 1
+
+# The MJPG plugin needs a unique HTTP port number
+# MJPG stream viewable via http://ioc-hutch-name:$HTTP_PORT/MJPG1.mjpg
+HTTP_PORT	= 8002 
+
+
+
 
 # Image streams
 # Each image stream has it's own dedicated ROI and CC plugin
@@ -56,9 +62,25 @@ MODEL		= opal1000m_12
 #
 # Optional Stream Parameters: (More to be added later)
 #	IMAGE_NAME	Defaults to DATA1, IMAGE1, or THUMBNAIL depending on the type of stream
-STREAM(NAME=data,IMAGE_NAME=IMAGE1)
+STREAM(NAME=data,IMAGE_NAME=DATA1)
+STREAM(NAME=viewer,IMAGE_NAME=IMAGE1)
 STREAM(NAME=viewer,IMAGE_NAME=IMAGE2)
 STREAM(NAME=thumbnail,IMAGE_NAME=THUMBNAIL)
+
+# Plugin sets
+# Options for PLUGINS: commonPlugins and pcdsPlugins
+#	commonPlugins:
+#		Proc1, Trans1, CC1, CC2, Over1,
+#		ROI1, ROI2, ROI3, ROI4,
+#		Stats1, Stats2, Stats3, Stats4,
+#		NetCDF1, TIFF1, JPEG1, Nexus1, HDF51
+#	pcdsPlugins: commonPlugins plus
+#		IMAGE1, IMAGE2, THUMBNAIL
+#		ROI5, ROI6, ROI7
+#		MJPG1, FMPG1
+# Note: pcdsPlugins is being phased out in favor of the commonPlugins
+# along w/ one or more viewer or data streams
+PLUGINS		= commonPlugins
 
 # PLUGIN can be used to add individual plugins one by one
 # Must specify plugin NAME
@@ -68,32 +90,27 @@ STREAM(NAME=thumbnail,IMAGE_NAME=THUMBNAIL)
 # The Image plugin also requires parameter IMAGE_NAME
 #PLUGIN(NAME=Stats)
 #PLUGIN(NAME=Image,IMAGE_NAME=IMAGE3)
-#PLUGIN(NAME=TIFF,N=2)
-#PLUGIN(NAME=Stats,PORT=Stats5)
-PLUGIN(NAME=FileMPEG)
+#PLUGIN(NAME=ROI[,N=8])
+#PLUGIN(NAME=Stats[,PORT=ROI8])
+#PLUGIN(NAME=TIFF[,N=2])
+
+# Not in commonPlugins
+# MJPG:	Motion JPEG web stream via HTTP_PORT
+# MJPG stream viewable via http://ioc-hutch-name:$HTTP_PORT/MJPG1.mjpg
 PLUGIN(NAME=MJPG)
+# MPEG:	MPEG file I/O
+# MPEG streaming not available due to lack of driver suport and high cpu overhead
+PLUGIN(NAME=MPEG)
 
 # BLD is currently designed for the FEE spectrometer and needs
 # to get reworked into a Spectrometer PLUGIN
 # PLUGIN(Name=Spec,PROJ=Horiz,BLD_SRC=46)
 BLD(NAME=Spec,N=1)
 
-# Plugin sets
-# Options for PLUGINS are commonPlugins and pcdsPlugins
-# Note: pcdsPlugins is being phased out in favor of the commonPlugins
-# along w/ one or more viewer or data streams
-#PLUGINS		= commonPlugins
-
-# commonPlugins provides the following plugins:
-#	Proc1, Trans1, CC1, CC2, Over1,
-#	ROI1, ROI2, ROI3, ROI4,
-#	Stats1, Stats2, Stats3, Stats4,
-#	NetCDF1, TIFF1, JPEG1, Nexus1, HDF51
-
-# All areaDetector camera ioc's on a given host must have
-# their own HTTP and MJPG port numbers
-HTTP_PORT	= 7800
-
-# Optional acquisition auto-start
-AUTO_START	= 1
+# Viewers: Still supported, but being phased out in favor of streams
+# commonPlugins plus VIEWERS: MonoFull, MonoBin2, and MonoBin4
+# provides the same set of plugins as pcdsPlugins
+#VIEWER(NAME=MonoFull)
+#VIEWER(NAME=MonoBin2,IMAGE_NAME=IMAGE2)
+#VIEWER(NAME=MonoBin4,IMAGE_NAME=THUMBNAIL)
 
