Updated to ADStreamScreens R1.5.0 and added support for SCREENS_TOP in cfg files. Also fixed some minor st.cmd issues and added EDM_TOP to generated edm launcher.
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/ioc/common/edtCam/current@26034 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/iocBoot/templates/ioc-sample.cfg
+++ b/iocBoot/templates/ioc-sample.cfg
@@ -9,12 +9,15 @@ LOCATION	= "BUILDING 901-131"
 #TARGET_ARCH	= linuxRT_glibc-x86_64
 TARGET_ARCH	= linux-x86_64
 
+# HUTCH is used for the python viewer and to set SCREENS_TOP, the edm launch directory
 HUTCH		= xxx
-CAM_PV	    = XXX:G046B:02
-IOC_PV		= TST:IOC:EDT:OPAL1
-IOC_PV		= XXX:IOC:G046B:02
+# Optional: SCREENS_TOP, defaults to EPICS_SITE_TOP/3.14-dev/screens/edm/HUTCH/current
+# SCREENS_TOP	= ?
+
+CAM_PV	    = XXX:EDT:OPAL1
+IOC_PV		= XXX:IOC:OPAL1
 # EVR is optional but if used needs EVR_PV, EVR_TYPE, and EVR_TRIG
-#EVR_PV	    = XXX:EVR:G046B:02
+#EVR_PV	    = XXX:EVR:OPAL1
 #EVR_TYPE	= SLAC
 #EVR_TRIG	= 2
 # Optional additional triggers
@@ -36,8 +39,6 @@ MODEL		= opal1000m_12
 # The MJPG plugin needs a unique HTTP port number
 # MJPG stream viewable via http://ioc-hutch-name:$HTTP_PORT/MJPG1.mjpg
 HTTP_PORT	= 8002 
-
-
 
 
 # Image streams
