Added settings for WITH_HDF5, etc following pattern of ioc/common/gigECam In testing so far it appears we can configure these different in the ioc than in ADCore as long as ADCore supports a superset of the options and we get all the dependencies for each plugin we include.
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/ioc/common/edtCam/current@27960 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/edtApp/src/Makefile
+++ b/edtApp/src/Makefile
@@ -104,7 +104,9 @@ edt_LIBS += sz
 #edt_SYS_LIBS += xml2
 edt_LIBS += tiff
 edt_LIBS += jpeg
+ifdef PCRE_LIB
 edt_LIBS += pcre
+endif
 edt_SYS_LIBS += z
 edt_SYS_LIBS += pthread
 edt_SYS_LIBS += dl
@@ -138,5 +140,5 @@ include $(TOP)/configure/RULES
 showme:
 	@echo T_A=$(T_A)
 	@echo PKG_ARCH=$(PKG_ARCH)
-	@echo PCRE_TOP=$(PCRE_TOP)
+	@echo PCRE_LIB=$(PCRE_LIB)
 
