Fixed dup PV for the No EVR case by adding CAM prefix: $CAM:NoEvr:EvrUsed = 0
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/ioc/common/edtCam/current@28204 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/iocBoot/templates/ioc-sample.cfg
+++ b/iocBoot/templates/ioc-sample.cfg
@@ -1,21 +1,19 @@
 #
-# CONFIG file for edt Camera
-#
+# CONFIG file for edtCam child IOC
+# For more options see $RELEASE/iocBoot/default/ioc-sample.cfg
 
+# Brief version of ioc-sample.cfg suitable for development use.
 RELEASE		= /reg/g/pcds/package/epics/3.14/ioc/common/edtCam/R1.5.0
-
-ENGINEER	= "Bruce Hill (bhill)"
-LOCATION	= "BUILDING 901-131"
-#TARGET_ARCH	= linuxRT_glibc-x86_64
 TARGET_ARCH	= linux-x86_64
+
+ENGINEER	= "Your Name (yourusername)"
+LOCATION	= "Bldg XXX, HUTCH XXX, ?"
 
 # HUTCH is used for the python viewer and to set SCREENS_TOP, the edm launch directory
 HUTCH		= xxx
-# Optional: SCREENS_TOP, defaults to EPICS_SITE_TOP/3.14-dev/screens/edm/HUTCH/current
-# SCREENS_TOP	= ?
-
-CAM_PV	    = XXX:EDT:OPAL1
 IOC_PV		= XXX:IOC:OPAL1
+CAM_PV	    = XXX:EDT:OPAL1
+
 # EVR is optional but if used needs EVR_PV, EVR_TYPE, and EVR_TRIG
 #EVR_PV	    = XXX:EVR:OPAL1
 #EVR_TYPE	= SLAC
@@ -32,9 +30,6 @@ CHAN		= 0
 # Available models are: 
 # Options for MODEL can be found in: $RELEASE/db/$MODEL.env
 MODEL		= opal1000m_12
-
-# Optional acquisition auto-start
-# AUTO_START	= 1
 
 # The MJPG plugin needs a unique HTTP port number
 # MJPG stream viewable via http://ioc-hutch-name:$HTTP_PORT/MJPG1.mjpg
@@ -108,10 +103,8 @@ PLUGIN(NAME=MPEG)
 # PLUGIN(Name=Spec,PROJ=Horiz,BLD_SRC=46)
 BLD(NAME=Spec,N=1)
 
-# Viewers: Still supported, but being phased out in favor of streams
-# commonPlugins plus VIEWERS: MonoFull, MonoBin2, and MonoBin4
-# provides the same set of plugins as pcdsPlugins
-#VIEWER(NAME=MonoFull)
-#VIEWER(NAME=MonoBin2,IMAGE_NAME=IMAGE2)
-#VIEWER(NAME=MonoBin4,IMAGE_NAME=THUMBNAIL)
+#CAM_TRACE_MASK	= 9
+#CAM_TRACE_IO_MASK = 1
 
+# Optional acquisition auto-start
+AUTO_START	= 1
