--- a/iocBoot/templates/ioc-sample.cfg
+++ b/iocBoot/templates/ioc-sample.cfg
@@ -13,6 +13,15 @@ LOCATION	= "Bldg XXX, HUTCH XXX, ?"
 HUTCH		= xxx
 IOC_PV		= XXX:IOC:OPAL1
 CAM_PV	    = XXX:EDT:OPAL1
+CAM_NAME    = NameMe
+
+# TODO: Optional macros for image orientation and resolution
+# X_ORIENT    = enum {Normal,Reverse}?
+# Y_ORIENT    = enum {Normal,Reverse}?
+# ROTATE      = enum {0,90,180,270}?
+# X_RES       = 0.1e-3
+# Y_RES       = 0.1e-3
+# RES_EGU     = um
 
 # EVR is optional but if used needs EVR_PV, EVR_TYPE, and EVR_TRIG
 #EVR_PV	    = XXX:EVR:OPAL1
