Fix another typo in image_meta.template
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/ioc/common/edtCam/current@28330 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/edtApp/Db/image_meta.template
+++ b/edtApp/Db/image_meta.template
@@ -13,8 +13,8 @@ record( ai, "$(P)$(R)RESOLUTION" )
 {
 	field( DESC, "resolution" )
 	field( PINI, "YES" )
-	field( VAL,  "\$(RESOLUTION=1)" )
-	field( EGU,  "\$(RES_EGU=um)" )
+	field( VAL,  "$(RESOLUTION=1)" )
+	field( EGU,  "$(RES_EGU=um)" )
 	field( PREC, "3" )
 	info( autosaveFields, "EGU VAL" )
 }
