Let's make autosave and archive files, shall we?
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/tags/ioc/common/edtCam/R1.14.0@28672 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/iocBoot/Makefile
+++ b/iocBoot/Makefile
@@ -8,6 +8,6 @@ include $(TOP)/configure/CONFIG
 # No need to make these every time
 # If you want to test one of these older ioc's,
 # run make from it's directory
-#DIRS += $(wildcard *ioc*)
+DIRS += $(wildcard *ioc*)
 include $(EPICS_BASE)/configure/RULES_DIRS
 
