bi records don't have an EGU field to autosave
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/ioc/common/edtCam/current@28826 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/edtApp/Db/image_meta.template
+++ b/edtApp/Db/image_meta.template
@@ -26,7 +26,7 @@ record(bi, "$(P)$(R)X_ORIENT")
 	field(PINI, "YES")
 	field(ZNAM, "Normal")
 	field(ONAM, "Reverse")
-	info( autosaveFields, "EGU VAL" )
+	info( autosaveFields, "VAL" )
 }
 
 record(bi, "$(P)$(R)Y_ORIENT")
@@ -36,7 +36,7 @@ record(bi, "$(P)$(R)Y_ORIENT")
 	field(PINI, "YES")
 	field(ZNAM, "Normal")
 	field(ONAM, "Reverse")
-	info( autosaveFields, "EGU VAL" )
+	info( autosaveFields, "VAL" )
 }
 
 record(ai, "$(P)$(R)X_RTCL_CTR")
