--- a/iocBoot/templates/Makefile
+++ b/iocBoot/templates/Makefile
@@ -1,6 +1,7 @@
 # Makefile for ioc instance
 TOP = ../..
 -include ./IOC_APPL_TOP
+-include ../IOC_APPL_TOP
 ifneq (,$(IOC_APPL_TOP))
 TOP = $(IOC_APPL_TOP)
 endif
