Added more comments for how to enable asyn trace

--- a/iocBoot/templates/ioc-sample.cfg
+++ b/iocBoot/templates/ioc-sample.cfg
@@ -112,8 +112,13 @@ PLUGIN(NAME=MPEG)
 # PLUGIN(Name=Spec,PROJ=Horiz,BLD_SRC=46)
 BLD(NAME=Spec,N=1)
 
-#CAM_TRACE_MASK	= 9
-#CAM_TRACE_IO_MASK = 1
+# asyn trace for CAM device
+#CAM_TRACE	= 1
+#CAM_TRACE_IO = 0
+
+# asyn trace for CAM.SER device
+#SER_TRACE	= 9
+#SER_TRACE_IO = 1
 
 # Optional acquisition auto-start
 AUTO_START	= 1
