Update template to allow spaces in CAM_NAME and expand comments and examples in ioc-sample.cfg

--- a/iocBoot/templates/ioc-sample.cfg
+++ b/iocBoot/templates/ioc-sample.cfg
@@ -44,6 +44,11 @@ MODEL		= opal1000m_12
 # MJPG stream viewable via http://ioc-hutch-name:$HTTP_PORT/MJPG1.mjpg
 HTTP_PORT	= 8002 
 
+# Uncomment this line to Enable GENICAM communications
+#GENICAM     = 1
+
+# POWER is a new optional macro that ends up in $(CAM):POWER_PV
+POWER		= SXR:R24:PWR:28:Outlet:3:SetControlAction
 
 # Image streams
 # Each image stream has it's own dedicated ROI and CC plugin
@@ -112,13 +117,20 @@ PLUGIN(NAME=MPEG)
 # PLUGIN(Name=Spec,PROJ=Horiz,BLD_SRC=46)
 BLD(NAME=Spec,N=1)
 
-# asyn trace for CAM device
-#CAM_TRACE	= 1
-#CAM_TRACE_IO = 0
+# asyn trace for CAM device and CAM.SER device
+# (shown below w/ their default value)
+CAM_TRACE	 = 1
+CAM_TRACE_IO = 0
+SER_TRACE	 = 9
+SER_TRACE_IO = 1
 
-# asyn trace for CAM.SER device
-#SER_TRACE	= 9
-#SER_TRACE_IO = 1
+# Optional debug variables
+# (shown below w/ their default value)
+DEBUG_TS_FIFO = 1
+DEBUG_EDT_PDV = 2
+DEBUG_EDT_SER = 2
+DEBUG_GENICAM = 1
+save_restoreLogMissingRecords = 0
 
 # Optional acquisition auto-start
 AUTO_START	= 1
