Added MCoreUtils and cfg macro CPU_AFFINITY_SET to allow specifying cpu affinity for camera and EVR threads.

--- a/iocBoot/templates/ioc-sample.cfg
+++ b/iocBoot/templates/ioc-sample.cfg
@@ -15,6 +15,10 @@ IOC_PV		= XXX:IOC:OPAL1
 CAM_PV	    = XXX:EDT:OPAL1
 CAM_NAME    = NameMe
 
+# Optional: Specify CPU affinity
+# CPU_AFFINITY_SET = 0
+# CPU_AFFINITY_SET = 3-4
+
 # TODO: Optional macros for image orientation and resolution
 # X_ORIENT    = enum {Normal,Reverse}?
 # Y_ORIENT    = enum {Normal,Reverse}?
