--- a/iocBoot/Makefile
+++ b/iocBoot/Makefile
@@ -5,9 +5,7 @@ TOP = $(IOC_APPL_TOP)
 endif
 
 include $(TOP)/configure/CONFIG
-# No need to make these every time
-# If you want to test one of these older ioc's,
-# run make from it's directory
-#DIRS += $(wildcard *ioc*)
+
+DIRS += $(wildcard *ioc*)
 include $(EPICS_BASE)/configure/RULES_DIRS
 
