--- a/iocBoot/templates/ioc-sample.cfg
+++ b/iocBoot/templates/ioc-sample.cfg
@@ -3,8 +3,8 @@
 # For more options see $RELEASE/iocBoot/default/ioc-sample.cfg
 
 # Brief version of ioc-sample.cfg suitable for development use.
-RELEASE		= /reg/g/pcds/package/epics/3.14/ioc/common/edtCam/R1.5.0
-TARGET_ARCH	= linux-x86_64
+RELEASE		= /reg/g/pcds/epics/ioc/common/edtCam/R2.1.0
+TARGET_ARCH	= rhel7-x86_64
 
 ENGINEER	= "Your Name (yourusername)"
 LOCATION	= "Bldg XXX, HUTCH XXX, ?"
@@ -13,7 +13,7 @@ LOCATION	= "Bldg XXX, HUTCH XXX, ?"
 HUTCH		= xxx
 IOC_PV		= XXX:IOC:OPAL1
 CAM_PV	    = XXX:EDT:OPAL1
-CAM_NAME    = NameMe
+CAM_NAME    = "Your Camera Name"
 
 # Optional: Specify CPU affinity
 # CPU_AFFINITY_SET = 0
